--- a/html/coding/assets/css/mypage.css
+++ b/html/coding/assets/css/mypage.css
@@ -447,6 +447,7 @@ th {
     margin-left: 50px;
 }
 
+/* mydiary */
 .mydiary {}
 
 .mydiary .mydiary__title {
@@ -475,21 +476,70 @@ th {
     width: 50%;
     height: 400px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 50px;
     border-radius: 30px;
+    position: relative;
+}
+
+.mydiary .mydiary__wrap .mydiary1 .mydiary1-1 img {
+    width: 35%;
+    position: absolute;
+    top: 70px;
+    right: 50px;
+    transition: transform 0.3s ease
+}
+
+.mydiary .mydiary__wrap .mydiary1 .mydiary1-1 img:hover {
+    width: 35%;
+    position: absolute;
+    top: 70px;
+    right: 50px;
+    transform: scale(1.06);
+}
+
+.mydiary .mydiary__wrap .mydiary1 .mydiary1-1 .mydiary__title2 {
+    font-size: 2rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+}
+
+.mydiary .mydiary__wrap .mydiary1 .mydiary1-1 .mydiary__text {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    display: flex;
+    align-items: center;
 }
 
 .mydiary .mydiary__wrap .mydiary1 .mydiary1-2 {
     width: 50%;
     height: 400px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 60px 77px;
     border-radius: 30px;
+    line-height: 1.2;
+    display: flex;
+    align-items: center;
+}
+
+.mydiary .mydiary__wrap .mydiary1 .mydiary1-2 .mydiary__title2 {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    background-color: var(--pointColor);
+    transition: transform 0.3s ease;
+}
+
+.mydiary .mydiary__wrap .mydiary1 .mydiary1-2 .mydiary__title2:hover {
+    transform: scale(1.06);
 }
 
 .mydiary .mydiary__wrap .mydiary2 {
     width: 100%;
-    height: 350px;
+    height: 280px;
     display: flex;
     gap: 15px;
     margin-bottom: 1.5rem;
@@ -497,26 +547,105 @@ th {
 
 .mydiary .mydiary__wrap .mydiary2 .mydiary2-1 {
     width: 33.333%;
-    height: 350px;
+    height: 280px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 20px;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-1 .mydiary__title2 {
+    font-size: 2rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    transition: transform 0.3s ease;
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-1 .mydiary__text {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    background-color: var(--pointColor);
+    transition: transform 0.3s ease;
+    display: inline-block;
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-1 .mydiary__text:hover {
+    transform: scale(1.06);
 }
 
 .mydiary .mydiary__wrap .mydiary2 .mydiary2-2 {
     width: 33.333%;
-    height: 350px;
+    height: 280px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 20px;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-2 .mydiary__title2 {
+    font-size: 2rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-2 .mydiary__text {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    background-color: var(--pointColor);
+    transition: transform 0.3s ease;
+    display: inline-block;
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-2 .mydiary__text:hover {
+    transform: scale(1.06);
 }
 
 .mydiary .mydiary__wrap .mydiary2 .mydiary2-3 {
     width: 33.333%;
-    height: 350px;
+    height: 280px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 20px;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-3 .mydiary__title2 {
+    font-size: 2rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-3 .mydiary__text {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    background-color: var(--pointColor);
+    transition: transform 0.3s ease;
+    display: inline-block;
+}
+
+.mydiary .mydiary__wrap .mydiary2 .mydiary2-3 .mydiary__text:hover {
+    transform: scale(1.06);
 }
 
 .mydiary .mydiary__wrap .mydiary3 {
@@ -531,17 +660,83 @@ th {
     width: 50%;
     height: 250px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 20px;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
 }
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-1 .mydiary__title2 {
+    font-size: 2rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+}
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-1 .mydiary__text1 {
+    font-size: 1rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 400;
+    display: block;
+}
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-1 .mydiary__text {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    transition: transform 0.3s ease;
+}
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-1 .mydiary__text:hover {
+    transform: scale(1.06);
+}
+
 
 .mydiary .mydiary__wrap .mydiary3 .mydiary3-2 {
     width: 50%;
     height: 250px;
     background-color: var(--pointColor);
-    padding: 30px;
+    padding: 20px;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
 }
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-2 .mydiary__title2 {
+    font-size: 2rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+}
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-2 .mydiary__text1 {
+    font-size: 1rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 400;
+    display: block;
+}
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-2 .mydiary__text {
+    font-size: 4.5rem;
+    color: var(--mainColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    transition: transform 0.3s ease;
+}
+
+.mydiary .mydiary__wrap .mydiary3 .mydiary3-2 .mydiary__text:hover {
+    transform: scale(1.06);
+}
+
 
 .mydiary .mydiary__wrap .mydiary4 {
     width: 100%;
@@ -553,8 +748,27 @@ th {
 
 .mydiary .mydiary__wrap .mydiary4 .mydiary4-1 {
     width: 100%;
-    height: 400px;
+    height: 250px;
     background-color: var(--mainColor);
-    padding: 30px;
+    padding: 100px;
     border-radius: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.mydiary .mydiary__wrap .mydiary4 .mydiary4-1 .mypage__textwrap {}
+
+.mydiary .mydiary__wrap .mydiary4 .mydiary4-1 .mydiary__title3 {
+    font-size: 4.5rem;
+    color: var(--backgroundColor);
+    font-family: var(--fontG);
+    font-weight: 600;
+    display: block;
+    line-height: 1.2;
+}
+
+.mydiary .mydiary__wrap .mydiary4 .mydiary4-1 img {
+    width: 20%;
 }
