--- a/html/coding/assets/css/style.css
+++ b/html/coding/assets/css/style.css
@@ -19,6 +19,7 @@
 @import "mypage.css";
 @import "detailpage.css";
 @import "aboutpage.css";
+@import "editmember.css";
 
 /* 로그인 로그아웃 */
 /* 외부CSS  */
