--- a/html/coding/assets/css/style.css
+++ b/html/coding/assets/css/style.css
@@ -20,6 +20,7 @@
 @import "detailpage.css";
 @import "aboutpage.css";
 @import "editmember.css";
+@import "badge.css";
 
 /* 로그인 로그아웃 */
 /* 외부CSS  */
