--- a/html/coding/assets/css/badge.css
+++ b/html/coding/assets/css/badge.css
@@ -7,7 +7,7 @@
 /* badge__container */
 .badge__container {
     width: 85%;
-    height: 2500px;
+    height: 1600px;
     margin: 0 auto;
 }
 
@@ -62,24 +62,29 @@ a .badge__text {
 }
 
 a .badge__text:hover {
-    text-decoration: underline;
+    font-weight: 700;
 }
 
 /* badge__popup */
 .badge__popup {
-    width: 500px;
-    height: 700px;
+    width: 520px;
+    height: 720px;
     background-color: var(--mainColor);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    top: 50%;
+    left: 35%;
+    position: absolute;
+    /* display: none; */
 }
 
 /* badge__popup1 */
 .badge__popup .badge__popup1 {
-    width: 400px;
+    width: 380px;
     height: 530px;
     background-color: var(--backgroundColor);
     border-radius: 12px;
@@ -88,6 +93,7 @@ a .badge__text:hover {
     flex-direction: column;
     padding: 50px 5px;
     box-sizing: border-box;
+    margin-top: 45px;
 }
 
 .badge__popup img {
@@ -124,19 +130,44 @@ a .badge__text:hover {
 }
 
 /* badge__popup2 */
-.badge__popup2 {
+
+.badge__popup2 {}
+
+/* imgSave */
+.imgSave {
     display: flex;
-    width: 100%;
     justify-content: center;
-    align-items: center;
-    margin-top: 42px;
+    margin-top: 38px;
+
 }
 
-.badge__popup2 img {
-    width: 30px;
+.imgSave:hover {
+    font-weight: 700;
+}
+
+.imgSave img {
+    width: 24px;
+    height: auto;
     margin-right: 10px;
 }
 
-.badge__popup2 a {
+.imgSave a {
     color: var(--backgroundColor);
+    font-size: 18px;
+}
+
+/* imgClose */
+.close__btn {
+    position: absolute;
+    top: 24px;
+    right: 20px;
+}
+
+.close__btn svg {
+    width: 100%;
+    display: block;
+}
+
+.close__btn svg:hover path {
+    fill: #fff
 }
