--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,8 @@
 @import "login.css";
 @import "main.css";
 @import "comm_notice.css";
-@import "about.css";
 @import "feed.css";
-@import "aboutpage.css";
+@import "card.css";
 
 /* 로그인 로그아웃 */
 /* 외부CSS  */
