--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -40,7 +40,9 @@
     --logout: url(../svg/log-out.svg);
     --heart: url(../svg/heart.svg);
     --heartRed: url(../svg/heart-red.svg);
-    --eye: url(../svg/eye.svg)
+    --eye: url(../svg/eye.svg);
+    --arrowRight: url(../svg/arrow-right-circle.svg);
+    --arrowLeft: url(../svg/arrow-left-circle.svg);
 }
 
 @media (max-width: 800px) {
