--- a/html/coding/assets/css/style.css
+++ b/html/coding/assets/css/style.css
@@ -21,6 +21,7 @@
 @import "aboutpage.css";
 @import "editmember.css";
 @import "badge.css";
+@import "saveMarathon.css";
 
 /* 로그인 로그아웃 */
 /* 외부CSS  */
